Fixed background so there was no white space

--- a/navigationbarstyle.css
+++ b/navigationbarstyle.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Sofia');  
 
 body {
-	background: url(images/backgroundimg.jpg) no-repeat;
+	background: url(images/backgroundimg.jpg);
 	background-size: 100% 100%;
 }
 
